<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@drawable/main_screen_filters_background"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">


            <RelativeLayout
                android:id="@+id/rl_filters_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <FrameLayout
                    android:id="@+id/fl_filter_states"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group_states"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:selectionRequired="true"
                        app:singleSelection="true"
                        android:layout_gravity="center">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_all"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            app:checkedIconEnabled="true"
                            android:text="@string/filter_all"/>

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_active"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            app:checkedIconEnabled="true"
                            android:text="@string/filter_active"/>

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_expired"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            app:checkedIconEnabled="true"
                            android:text="@string/filter_expired"/>

                    </com.google.android.material.chip.ChipGroup>

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/fl_filters_sort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fl_filter_states">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group_sort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:selectionRequired="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_sort_by_newest"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            app:checkedIconEnabled="true"
                            android:text="@string/sorted_by_newest"/>

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_sort_by_close_to_expire"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            app:checkedIconEnabled="true"
                            android:text="@string/sorted_by_expire_soon"/>



                    </com.google.android.material.chip.ChipGroup>
                </FrameLayout>

            </RelativeLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_reminders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

    <RelativeLayout
        android:id="@+id/rl_empty_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_empty_list"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@drawable/empty_list" />

        <TextView
            android:id="@+id/tv_empty_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_empty_list"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="@color/purple_500"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/empty_message" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/swirly_scribbled_arrow"
            android:rotation="90"
            android:layout_below="@id/tv_empty_message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            />
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/purple_500"
        app:tint="@color/white"
        android:contentDescription="@string/floating_button_description"
        app:elevation="0dp"
        app:srcCompat="@android:drawable/ic_input_add"/>


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </FrameLayout>





</androidx.coordinatorlayout.widget.CoordinatorLayout>